--- a/css/login.css
+++ b/css/login.css
@@ -4,7 +4,11 @@
 
 .fade-in {
   opacity: 0;
-  transition: opacity 250ms ease-in-out;
+  transition: opacity 250ms ease-in-out 250ms;
+}
+
+.fade-in-out {
+  transition: opacity 150ms ease-in-out;
 }
 
 .hello-message {
@@ -112,9 +116,13 @@
 .form .submit-container {
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
+  row-gap: calc(var(--font-size) * 1.5);
+  column-gap: calc(var(--font-size) * 2.5);
 }
 
-.form .submit-button {
+.form .submit-button,
+.form .signup-button {
   border: 2px solid var(--secondary-accent);
   color: var(--secondary-accent);
   padding: calc(var(--font-size) * 1.15) calc(var(--font-size) * 3.8);
@@ -123,16 +131,22 @@
   -webkit-transition: all 125ms ease-in-out;
 }
 
-.form .submit-button:hover {
+.form .submit-button:hover,
+.form .signup-button:hover {
   outline-style: solid;
   outline-width: 1px;
   outline-color: var(--secondary-accent);
   border-radius: calc(var(--font-size) * .5);
 }
 
-.form .submit-button:focus {
+.form .submit-button:focus,
+.form .signup-button:focus {
   box-shadow: 0px 0px 0px 1px;
   border-radius: calc(var(--font-size) * .5);
+}
+
+.form .submit-container .signup-button {
+  padding: calc(var(--font-size) * 1.15) calc(var(--font-size) * 3.3);
 }
 
 .form .bcc {
