--- a/css/login.css
+++ b/css/login.css
@@ -126,21 +126,18 @@
 }
 
 .form .submit-button,
-.form .signup-button,
-.form .login-button,
-.form .guest-button {
+.form .non-submit-button {
   border: 2px solid var(--secondary-accent);
   color: var(--secondary-accent);
-  padding: calc(var(--font-size) * 1.15) calc(var(--font-size) * 3.81);
+  padding: calc(var(--font-size) * 1.15);
   outline-color: var(--secondary-accent-invisible);
+  min-width: calc(var(--font-size) * 10.875);
   transition: all 125ms ease-in-out;
   -webkit-transition: all 125ms ease-in-out;
 }
 
 .form .submit-button:hover,
-.form .signup-button:hover,
-.form .login-button:hover,
-.form .guest-button:hover {
+.form .non-submit-button:hover {
   outline-style: solid;
   outline-width: 1px;
   outline-color: var(--secondary-accent);
@@ -148,27 +145,9 @@
 }
 
 .form .submit-button:focus,
-.form .signup-button:focus,
-.form .login-button:focus,
-.form .guest-button:focus {
+.form .non-submit-button:focus {
   box-shadow: 0px 0px 0px 2px;
   border-radius: calc(var(--font-size) * .5);
-}
-
-.form .submit-container .signup-button {
-  padding: calc(var(--font-size) * 1.15) calc(var(--font-size) * 3.3);
-}
-
-.form .submit-container .logout-button {
-  padding: calc(var(--font-size) * 1.15) calc(var(--font-size) * 3.4);
-}
-
-.form .submit-container .guest-button {
-  padding: calc(var(--font-size) * 1.15) calc(var(--font-size) * 3.74);
-}
-
-.form .submit-container .state-button {
-  padding: calc(var(--font-size) * 1.15) calc(var(--font-size) * 2.3);
 }
 
 .form .bcc {
